Added some styles and header was change

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -4,6 +4,6 @@
 }
 
 @font-face {
-    font-family:'HelveticaNeueCyr';
+    font-family:'Helvetica Neue';
     src: url('../fonts/HelveticaNeueCyr-Light.ttf');
 }
