--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -63,9 +63,25 @@
             display: block;
             margin: 0 auto;
             width: 180px;
+            @media (max-width: 360px) {
+                width: 135px;
+            }
+        }
+        @media (min-width: 1100px) {
+            display: none !important;
         }
         @media (max-width: 360px) {
             padding-top: 8px;
+        }
+    }
+
+    &__navbar {
+        @media (min-width: 1100px) {
+            overflow: unset;
+        }
+        @media (max-width: 1100px) {
+            height: 100%;
+            overflow: auto;
         }
     }
 
@@ -105,6 +121,10 @@
         padding: 12px;
         display: block;
         transition: 0.2s ease;
+        @media (max-width: 768px) {
+            font-size: 18px;
+            padding: 16px;
+        }
         &:hover {
             color: #dc1414;
         }
@@ -176,6 +196,9 @@
                 box-shadow: unset;
             }
         }
+        @media (max-width: 768px) {
+            padding: 14px;
+        }
     }
 
     // .menu__btn
@@ -199,6 +222,11 @@
         left: 10px;
         background-color: transparent;
         border: none;
+        @media (max-width: 360px) {
+            width: 32px;
+            top: 22px;
+            left: 18px;
+        }
     }
 }
 
@@ -230,11 +258,15 @@
     &__order-call {
         color: #dc1414;
         border-bottom: 1px dashed #dc1414;
+        cursor: pointer;
         &:hover {
             transform: scale(1.1);
         }
         @media (max-width: 360px) {
-            font-size: 11px;
+            font-size: 13px;
+        }
+        @media (max-width: 320px) {
+            font-size: 12px;
         }
     }
 
@@ -244,8 +276,9 @@
         display: flex;
         justify-content: space-between;
         width: 440px;
-        @media (max-width: 670px) {
+        @media (max-width: 768px) {
             width: unset;
+            flex-basis: 68%;
         }
     }
 
@@ -424,7 +457,7 @@
     // .content__form
 
     &__form {
-        width: 380px;
+        max-width: 380px;
         padding-bottom: 24px;
         @media (max-width: 420px) {
             width: unset;
@@ -452,23 +485,20 @@
     // .content__form-btn
 
     &__form-btn {
-        padding: 14px 60px 18px;
         color: #ffffff;
         font-family: "Helvetica Neue";
         font-size: 20px;
         background-color: #dc1414;
         border: 1px solid transparent;
         border-radius: 8px;
+        width: 100%;
+        height: 56px;
+        cursor: pointer;
         &:active {
             transform: scale(0.99);
         }
         &:focus {
             outline: none;
-        }
-
-        @media (max-width: 420px) {
-            padding: 14px 32px;
-            width: 100%;
         }
     }
 
@@ -508,4 +538,57 @@
             width: 100%;
         }
     }
+
+    &__popup {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 130px;
+        left: 0;
+        background-color: #ffffff;
+        @media (max-width: 360px) {
+            top: 124px;
+        }
+    }
+}
+
+.popup {
+    // .popup__wrap
+
+    &__wrap {
+        max-width: 380px;
+        margin: 0 auto;
+        margin-top: 128px;
+        position: relative;
+    }
+
+    // .popup__title
+
+    &__title {
+        font-family: "Playfair Display";
+        font-size: 32px;
+        font-weight: 400;
+        margin-bottom: 32px;
+    }
+    &__btn {
+        color: #808890;
+        cursor: pointer;
+    }
+    &__cancel-btn {
+        position: absolute;
+        display: inline-block;
+        width: 20px;
+        top: -100px;
+        right: 15px;
+        @media (max-width: 360px) {
+            width: 16px;
+        }
+    }
+}
+
+/* Thanks page */
+
+.thanks_page {
+    background-image: none;
 }
