added new files and created new page

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,9 +1,14 @@
 @font-face {
-    font-family:'Playfair Display';
-    src: url('../fonts/PlayfairDisplay-Regular.ttf');
+    font-family: "Playfair Display";
+    src: url("../fonts/PlayfairDisplay-Regular.ttf");
 }
 
 @font-face {
-    font-family:'Helvetica Neue';
-    src: url('../fonts/HelveticaNeueCyr-Light.ttf');
+    font-family: "Helvetica Neue";
+    src: url("../fonts/HelveticaNeueCyr-Light.ttf");
+}
+
+@font-face {
+    font-family: "Futura PT Book";
+    src: url("../fonts/Futura_PT_Book.ttf");
 }
