--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -589,6 +589,124 @@
 
 /* Thanks page */
 
-.thanks_page {
-    background-image: none;
+.thankful {
+    // .thankful__inner
+
+    &__inner {
+        padding-top: 141px;
+        padding-bottom: 100px;
+        @media (max-width: 768px) {
+            padding-top: 155px;
+            padding-bottom: 7px;
+        }
+        @media (max-width: 360px) {
+            padding-top: 197px;
+            padding-bottom: 7px;
+        }
+    }
+
+    // .thankful__subtitle
+
+    &__caption {
+        padding-left: 225px;
+        @media (max-width: 768px) {
+            padding-left: 63px;
+        }
+        @media (max-width: 360px) {
+            padding-left: 0;
+        }
+    }
+
+    &__subtitle {
+        font-family: "Futura PT Book";
+        font-size: 22px;
+        font-weight: 300;
+        color: #808890;
+        text-transform: uppercase;
+        letter-spacing: 7px;
+        line-height: 24px;
+        margin-bottom: 16px;
+        @media (max-width: 768px) {
+            font-size: 16px;
+        }
+        @media (max-width: 360px) {
+            font-size: 14px;
+            line-height: 20px;
+        }
+    }
+
+    // .thankful__title
+
+    &__title {
+        color: #485058;
+        font-family: "Playfair Display";
+        font-size: 64px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: normal;
+        line-height: 72px;
+        margin-bottom: 45px;
+        @media (max-width: 768px) {
+            font-size: 40px;
+            line-height: 48px;
+        }
+        @media (max-width: 360px) {
+            font-size: 32px;
+            line-height: 40px;
+        }
+    }
+
+    // .thankful__btn
+
+    &__btn {
+        max-width: 328px;
+        height: 48px;
+    }
+
+    // .thankful__item-wrap
+
+    &__item-wrap {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 202px;
+        align-items: center;
+        flex-wrap: wrap;
+        @media (max-width: 360px) {
+            margin-top: 100px;
+        }
+    }
+
+    &__item {
+        @media (max-width: 768px) {
+            flex-basis: 50%;
+            text-align: center;
+            margin-bottom: 48px;
+        }
+        @media (max-width: 360px) {
+            flex-basis: 100%;
+            text-align: center;
+            margin-bottom: 48px;
+        }
+    }
+
+    // .thankful__item-img
+
+    &__item-img {
+        width: auto;
+        height: 80px;
+        margin: 0 auto;
+    }
+
+    // .thankful__item-title
+
+    &__item-title {
+        margin-top: 16px;
+        color: #485058;
+        font-family: "Playfair Display";
+        font-size: 20px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: normal;
+        line-height: 24px;
+    }
 }
