--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -661,6 +661,12 @@
     &__btn {
         max-width: 328px;
         height: 48px;
+        display: inline-block;
+        font-size: 20px;
+        font-style: normal;
+        letter-spacing: normal;
+        line-height: 43px;
+        text-align: center;
     }
 
     // .thankful__item-wrap
