--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,6 +21,7 @@
     @media (max-width: 360px) {
         padding-top: 8px;
     }
+
     &__title {
         font-family: "Helvetica Neue";
         font-size: 14px;
@@ -42,13 +43,14 @@
 
     &__list-wrap {
         flex-basis: 54%;
+        transition: left 0.5s ease;
         @media (max-width: 1100px) {
-            display: none;
+            // display: none;
             position: fixed;
             width: 100%;
             height: 100%;
             top: 0;
-            left: 0;
+            left: -1074px;
             background-color: rgba(0, 0, 0, 0.6);
             z-index: 10;
             padding-left: 65px;
@@ -144,7 +146,7 @@
                     background-image: none;
                     top: 12px;
                     left: unset;
-                    right: 0;
+                    right: 15px;
                 }
             }
         }
@@ -204,17 +206,29 @@
     // .menu__btn
 
     &__btn {
+        &:focus {
+            outline: none;
+        }
         display: none;
+        position: absolute;
+        right: 15px;
+        border: none;
         @media (max-width: 1100px) {
             display: block;
-            position: absolute;
-            right: 15px;
             background-color: transparent;
-            border: none;
+        }
+        @media (max-width: 360px) {
+            top: 20px;
+            & img {
+                height: 15px;
+            }
         }
     }
 
     &__cancel-btn {
+        &:focus {
+            outline: none;
+        }
         display: none;
         position: absolute;
         width: 40px;
@@ -226,6 +240,14 @@
             width: 32px;
             top: 22px;
             left: 18px;
+        }
+    }
+}
+
+.logo {
+    @media (max-width: 360px) {
+        & img {
+            width: 117px;
         }
     }
 }
@@ -303,11 +325,16 @@
     &__social-item--whatsup {
         &:hover {
             color: #25d366;
-            font-weight: 600;
+            &::before {
+                background-image: url("../images/whatsup-2.svg");
+            }
         }
         &::before {
             content: "";
             background-image: url("../images/whatsup.svg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
             position: absolute;
             width: 25px;
             height: 25px;
@@ -325,11 +352,16 @@
     &__social-item--telegram {
         &:hover {
             color: #0088cc;
-            font-weight: 600;
+            &::before {
+                background-image: url("../images/telegram-2.svg");
+            }
         }
         &::before {
             content: "";
             background-image: url("../images/telegram.svg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
             position: absolute;
             width: 26px;
             height: 26px;
